# OpenCL-projects

Dijkstra Algorithm/: CMakeLists.txt  main.cpp
Dijkstra Algorithm/include/: constants.hpp  ds.hpp  error.hpp  graph.hpp  helper.hpp  input.hpp  kernel.cl  opencl_sol.hpp
Dijkstra Algorithm/src/: graph.cpp  input.cpp  opencl_sol.cpp
Hello World/: CMakeLists.txt  HelloWorld.cl  HelloWorld.cpp
Hello World/include/: Cleanup.hpp  CommandQueue.hpp  Context.hpp  MemObjects.hpp  Program.hpp
Vector addition/: test_opencl.cpp
